--- a/developerweek2018/templates/projects/list.html
+++ b/developerweek2018/templates/projects/list.html
@@ -6,17 +6,17 @@
     <div class="col-lg-4">
       <h2><i class="fa fa-flask"></i> Cat vs Dog</h2>
       <p>Is it a cat or dog?</p>
-      <p><a class="btn btn-default" href="/projects/1">View &raquo;</a></p>
+      <p><a class="btn btn-default" href="/experiments/1">View &raquo;</a></p>
     </div>
     <div class="col-lg-4">
-      <h2><i class="fa fa-flask"></i> Cat vs Dog</h2>
-      <p>Is it a cat or dog?</p>
-      <p><a class="btn btn-default" href="/projects/1">View &raquo;</a></p>
+      <h2><i class="fa fa-flask"></i> Hotdog vs Not Hotdog</h2>
+      <p>Is it a hotdog or not hotdog?</p>
+      <p><a class="btn btn-default" href="/experiments/1">View &raquo;</a></p>
    </div>
     <div class="col-lg-4">
-      <h2><i class="fa fa-flask"></i> Cat vs Dog</h2>
-      <p>Is it a cat or dog?</p>
-      <p><a class="btn btn-default" href="/projects/1">View &raquo;</a></p>
+      <h2><i class="fa fa-flask"></i> Buy or Sell Bitcoin</h2>
+      <p>Bitcoin quant trading model</p>
+      <p><a class="btn btn-default" href="/experiments/1">View &raquo;</a></p>
     </div>
   </div><!-- /.row -->
 </div>
