--- a/developerweek2018/templates/experiments/show.html
+++ b/developerweek2018/templates/experiments/show.html
@@ -13,10 +13,12 @@
   </li>
 </ul>
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <iframe class="result-iframe w-100" src="/jupyter/tree" frameborder="0"></iframe>
+  </div>
   <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
   <div class="tab-pane fade results" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-    <iframe id="result-iframe" height="500px" class="w-100" src="/tb" frameborder="0"></iframe>
+    <iframe class="result-iframe w-100" src="/tb" frameborder="0"></iframe>
   </div>
 </div>
 
