--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,53 +4,14 @@
 
 /* universal */
 
-html {
-  overflow-y: scroll;
-}
-
-body {
-  padding-top: 60px;
-}
-
-section {
-  overflow: auto;
-}
-
-textarea {
-  resize: vertical;
-}
-
-.container-narrow{
-  margin: 0 auto;
-  max-width: 700px;
-}
-
-/* Forms */
-
-.navbar-form input[type="text"],
-.navbar-form input[type="password"] {
-  width: 180px;
-}
-
-
-.form-register {
-  width: 50%;
-}
-
-.form-register .form-control {
-  position: relative;
-  font-size: 16px;
-  height: auto;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+.body-content {
+  padding: 3rem 0;
+  min-height: calc(100vh - 97px);
 }
 
 /* footer */
 
 footer {
-  margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #999999;
@@ -91,6 +52,18 @@ footer .footer-nav {
   min-height: 811px;
 }
 
-#result-iframe {
+.result-iframe {
   height: 811px;
+}
+
+.experiments .row {
+  border: 1px solid lightgrey;
+  border-radius: 7px;
+  margin: 5px 0;
+  padding: 8px 0;
+}
+
+.experiments .run {
+  display: flex;
+  align-items: center;
 }
