--- a/developerweek2018/templates/layout.html
+++ b/developerweek2018/templates/layout.html
@@ -31,28 +31,23 @@
 {% include "nav.html" %}
 {% endwith %}
 
-<header>{% block header %}{% endblock %}</header>
-<div class="{% block content_class %}container{% endblock content_class %}">
+<div class="body-content">
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+  <div class="row">
+    <div class="col-md-12">
+      {% for category, message in messages %}
+      <div class="alert alert-{{ category }}">
+        <a class="close" title="Close" href="#" data-dismiss="alert">&times;</a>
+        {{message}}
+      </div><!-- end .alert -->
+      {% endfor %}
+    </div><!-- end col-md -->
+  </div><!-- end row -->
+  {% endif %}
+  {% endwith %}
 
-  <div role="main">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    <div class="row">
-      <div class="col-md-12">
-        {% for category, message in messages %}
-        <div class="alert alert-{{ category }}">
-          <a class="close" title="Close" href="#" data-dismiss="alert">&times;</a>
-         {{message}}
-        </div><!-- end .alert -->
-        {% endfor %}
-      </div><!-- end col-md -->
-    </div><!-- end row -->
-        {% endif %}
-    {% endwith %}
-
-    {% block content %}{% endblock %}
-  </div>
-
+  {% block content %}{% endblock %}
 </div><!-- end container -->
 
 {% include "footer.html" %}
