--- a/developerweek2018/templates/projects/show.html
+++ b/developerweek2018/templates/projects/show.html
@@ -3,12 +3,16 @@
 {% block body_class %}experiments{% endblock %}
 {% block content %}
 <div class="container">
+  <h1 class="experiment_runs">Experiment Runs</h1>
   <div class="row">
     <div class="col-12">
       <div class="run">
         <div class="run-id col-1">1</div>
-        <a class="btn btn-primary mr-2" href="/experiments/1">View</a>
-        <a class="btn btn-primary" href="/experiments/1">Fork</a>
+        <span>Accuracy: 0.91</span>|<span>Last Run: 2018-01-24 13:44:12</span>
+        <div class="actions">
+          <a class="btn btn-primary mr-2" href="/experiments/1">View</a>
+          <a class="btn btn-primary" href="/experiments/1">Fork</a>
+        </div>
       </div>
     </div>
   </div>
@@ -16,8 +20,11 @@
     <div class="col-12">
       <div class="run">
         <div class="run-id col-1">2</div>
-        <a class="btn btn-primary mr-2" href="/experiments/1">View</a>
-        <a class="btn btn-primary" href="/experiments/1">Fork</a>
+        <span>Accuracy: 0.71</span>|<span>Last Run: 2018-01-30 13:44:12</span>
+        <div class="actions">
+          <a class="btn btn-primary mr-2" href="/experiments/1">View</a>
+          <a class="btn btn-primary" href="/experiments/1">Fork</a>
+        </div>
       </div>
    </div>
   </div>
@@ -25,8 +32,11 @@
     <div class="col-12">
       <div class="run">
         <div class="run-id col-1">3</div>
-        <a class="btn btn-primary mr-2" href="/experiments/1">View</a>
-        <a class="btn btn-primary" href="/experiments/1">Fork</a>
+        <span>Accuracy: 0.84</span>|<span>Last Run: 2018-02-02 13:44:12</span>
+        <div class="actions">
+          <a class="btn btn-primary mr-2" href="/experiments/1">View</a>
+          <a class="btn btn-primary" href="/experiments/1">Fork</a>
+        </div>
       </div>
     </div>
   </div>
