--- a/developerweek2018/templates/experiments/show.html
+++ b/developerweek2018/templates/experiments/show.html
@@ -1,7 +1,7 @@
 
 {% extends "layout.html" %}
 {% block content %}
-<h1>Experiment 4</h1>
+<h1>Experiment {{ id }}</h1>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Code</a>
@@ -12,7 +12,7 @@
 </ul>
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-    <iframe class="result-iframe w-100" src="/jupyter/tree" frameborder="0"></iframe>
+    <iframe class="result-iframe w-100" src="/jupyter/tree/experiment-{{ id }}" frameborder="0"></iframe>
   </div>
   <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
   <div class="tab-pane fade results" id="contact" role="tabpanel" aria-labelledby="contact-tab">
