--- a/developerweek2018/templates/nav.html
+++ b/developerweek2018/templates/nav.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
   <a class="navbar-brand" href="{{ url_for('public.home') }}">
-    developerweek2018
+    <img src="{{asset_url_for('img/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
